Summary details collapse-expand, remove underline in FS table editable textbox + fix school name not shown

--- a/default-fishschool/src/app/content/pages/components/farm/fish-schools/table/fs.table.component.scss
+++ b/default-fishschool/src/app/content/pages/components/farm/fish-schools/table/fs.table.component.scss
@@ -37,6 +37,10 @@ input.input-number-format:focus + label.label-number-format {
 	.mat-header-cell {
 		vertical-align: middle !important;
 	}
+
+	.mat-form-field-underline {
+		display: none;
+	}
 }
 
 /*::ng-deep {
